src/mega65/libc/conio.h


/*------------------------------------------------------------------------
  Box styles
  -----------------------------------------------------------------------*/
#define BOX_STYLE_NONE 0
#define BOX_STYLE_INNER 1
#define BOX_STYLE_MID 2
#define BOX_STYLE_OUTER 3

/*------------------------------------------------------------------------
  Public structs
  -----------------------------------------------------------------------*/
typedef struct tagRECT {
  unsigned char left, top, right, bottom;
} RECT;


/*------------------------------------------------------------------------
  Palette management
  -----------------------------------------------------------------------*/
/** \m65libsummary{setpalbank}{Set current text/bitmap palette bank (BTPALSEL).}
    \m65libsyntax    {void setpalbank(unsigned char bank)}
    \m65libparam     {bank}{The palette bank to set. Valid values are 0, 1, 2 or 3.}
    \m65libremarks   {Use setpalbanka to set alternate text/bitmap palette}
*/
void setpalbank(unsigned char bank);


/** \m65libsummary{setpalbanka}{Set alternate text/bitmap palette bank.}
    \m65libsyntax    {void setpalbanka(unsigned char bank)}
    \m65libparam     {bank}{The palette bank to set. Valid values are 0, 1, 2 or 3.}
    \m65libremarks   {Use setpalbank to set main text/bitmap palette}
*/
void setpalbanka(unsigned char bank);


/** \m65libsummary{getpalbank}{Get selected text/bitmap palette bank.}
    \m65libsyntax    {unsigned char getpalbank(void)}
    \m65libremarks   {Use getpalbanka to get alternate text/bitmap selected palette}
    \m65libretval    {The current selected main text/bitmap palette bank.}
*/
unsigned char getpalbank(void);


/** \m65libsummary{getpalbanka}{Get selected alternate text/bitmap palette bank.}
    \m65libsyntax    {unsigned char getpalbanka(void)}
    \m65libremarks   {Use getpalbank to get main text/bitmap selected palette}
    \m65libretval    {The current selected alternate text/bitmap palette bank.}
*/
unsigned char getpalbanka(void);


/** \m65libsummary{setmapedpal}{Set maped-in palette bank at $D100-$D3FF.}
    \m65libsyntax    {void setmapedpal(unsigned char bank)}
    \m65libparam     {bank}{The palette bank to map-in. Valid values are 0, 1, 2 or 3.}
*/
void setmapedpal(unsigned char bank);


/** \m65libsummary{getmapedpal}{Get maped-in  palette bank at $D100-$D3FF.}
    \m65libsyntax    {unsigned char getmapedpal(void)}
*/
unsigned char getmapedpal(void);


/** \m65libsummary{setpalentry}{Set color entry for the maped-in palette}
    \m65libsyntax    {void setpalentry(unsigned char c, unsigned char r, unsigned char g, unsigned char b)}
    \m65libparam     {c}{The palette entry index (0-255)}
    \m65libparam     {r}{The red component value}
    \m65libparam     {g}{The green component value}
    \m65libparam     {b}{The blue component value}
    \m65libremarks   {Use setmapedmal to bank-in the palette to modify}
*/
void setpalentry(unsigned char c, unsigned char r, unsigned char g, unsigned char b);


/*------------------------------------------------------------------------
  Screen draw operations
  -----------------------------------------------------------------------*/

/** \m65libsummary{fillrect}{Fill a rectangular area with character and color value}
    \m65libsyntax    {void fillrect(const RECT *rc, unsigned char ch, unsigned char col)}
    \m65libparam     {rc}{A RECT structure specifying the box coordinates}
    \m65libparam     {ch}{A char code to fill the rectangle}
    \m65libparam     {col}{The color to fill}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void fillrect(const RECT* rc, unsigned char ch, unsigned char col);


/** \m65libsummary{box}{Draws a box with graphic characters}
    \m65libsyntax    {void box(const RECT *rc, unsigned char color, unsigned char style, unsigned char clear, unsigned char
   shadow)} \m65libparam     {rc}{A RECT structure specifying the box coordinates} \m65libparam     {color}{The color to use
   for the graphic characters} \m65libparam     {style}{The style for the box borders. Can be set to BOX_STYLE_NONE,
   BOX_STYLE_ROUNDED, BOX_STYLE_INNER, BOX_STYLE_OUTER, BOX_STYLE_MID } \m65libparam     {clear}{Set to 1 to clear the box
   interior with the selected color} \m65libparam     {shadow}{Set to 1 to draw a drop shadow} \m65libremarks   {No screen
   bounds checks are performed; out of screen behavior is undefined }
*/
void box(const RECT* rc, unsigned char color, unsigned char style, unsigned char clear, unsigned char shadow);


/** \m65libsummary{hline}{Draws an horizontal line.}
    \m65libsyntax    {void hline(unsigned char x, unsigned char y, unsigned char len, unsigned char style)}
    \m65libparam     {x}{The line start X-coordinate}
    \m65libparam     {y}{The line start Y-coordinate}
    \m65libparam     {len}{The line length}
    \m65libparam     {style}{The style for the line. See HLINE_ constants for available styles. }
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void hline(unsigned char x, unsigned char y, unsigned char len, unsigned char style);


/** \m65libsummary{vline}{Draws a vertical line.}
    \m65libsyntax    {void vline(unsigned char x, unsigned char y, unsigned char len, unsigned char style)}
    \m65libparam     {x}{The line start X-coordinate}
    \m65libparam     {y}{The line start Y-coordinate}
    \m65libparam     {len}{The line length}
    \m65libparam     {style}{The style for the line. See VLINE_ constants for available styles. }
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void vline(unsigned char x, unsigned char y, unsigned char len, unsigned char style);


/*------------------------------------------------------------------------
  Cursor Movement
  -----------------------------------------------------------------------*/

/** \m65libsummary{gohome}{Set the current position at home (0,0 coordinate)}
    \m65libsyntax    {void gohome(void)}
*/
void gohome(void);


/** \m65libsummary{gotoxy}{Set the current position at X,Y coordinates}
    \m65libsyntax    {void gotoxy(unsigned char x, unsigned char y)}
    \m65libparam     {x}{The new X-coordinate}
    \m65libparam     {y}{The new Y-coordinate}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void gotoxy(unsigned char x, unsigned char y);


/** \m65libsummary{gotox}{Set the current position X-coordinate}
    \m65libsyntax    {void gotox(unsigned char x)}
    \m65libparam     {x}{The new X-coordinate}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void gotox(unsigned char x);


/** \m65libsummary{gotoy}{Set the current position Y-coordinate}
    \m65libsyntax    {void gotoy(unsigned char y)}
    \m65libparam     {y}{The new Y-coordinate}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void gotoy(unsigned char y);


/** \m65libsummary{moveup}{Move current position up}
    \m65libsyntax    {void moveup(unsigned char count)}
    \m65libparam     {count}{The number of positions to move}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void moveup(unsigned char count);


/** \m65libsummary{movedown}{Move current position down}
    \m65libsyntax    {void movedown(unsigned char count)}
    \m65libparam     {count}{The number of positions to move}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void movedown(unsigned char count);


/** \m65libsummary{moveleft}{Move current position left}
    \m65libsyntax    {void moveleft(unsigned char count)}
    \m65libparam     {count}{The number of positions to move}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void moveleft(unsigned char count);


/** \m65libsummary{moveright}{Move current position right}
    \m65libsyntax    {void moveright(unsigned char count)}
    \m65libparam     {count}{The number of positions to move}
    \m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }
*/
void moveright(unsigned char count);


/** \m65libsummary{wherex}{Return the current position X coordinate}
    \m65libsyntax    {unsigned char wherex(void)}
    \m65libretval    {The current position X coordinate}
*/
unsigned char wherex(void);


/** \m65libsummary{wherey}{Return the current position Y coordinate}
    \m65libsyntax    {unsigned char wherey(void)}
    \m65libretval    {The current position Y coordinate}
*/
unsigned char wherey(void);


/*------------------------------------------------------------------------
  PETSCII conversion output
  -----------------------------------------------------------------------*/

char petsciitoscreencode(char c);

char* petsciitoscreencode_s(char* s);

/** \m65libsummary{pcputsxy}{Output a petscii string at X,Y coordinates}
    \m65libsyntax    {void pcputsxy (unsigned char x, unsigned char y, const unsigned char* s)}
    \m65libparam     {x}{The X coordinate where string will be printed}
    \m65libparam     {y}{The Y coordinate where string will be printed}
    \m65libparam     {s}{The petscii string to print}
    \m65libremarks   {No pointer check is performed.  If s is null or invalid, behavior is undefined }
*/

#define pcputsxy(x, y, s) cputsxy(x, y, petsciitoscreencode_s(s))

/** \m65libsummary{pcputs}{Output a petscii string at current position}
    \m65libsyntax    {void pcputs(const unsigned char* s)}
    \m65libparam     {s}{The string to print}
    \m65libremarks   {No pointer check is performed.  If s is null or invalid, behavior is undefined }
    */

#define pcputs(s) cputs((unsigned char*)petsciitoscreencode_s(s));

/*------------------------------------------------------------------------
  Text output
  -----------------------------------------------------------------------*/

/** \m65libsummary{cputc}{Output a single screen code character to screen at current position}
    \m65libsyntax    {void cputc(unsigned char c)}
    \m65libparam     {c}{The screen code of the character to output}
*/
void cputc(unsigned char c);


/** \m65libsummary{cputnc}{Output N copies of a character at current position}
    \m65libsyntax    {void cputnc(unsigned char count, unsigned char c)}
    \m65libparam     {c}{The screen code of the characters to output}
    \m65libparam     {count}{The count of characters to print}
*/
void cputnc(unsigned char count, unsigned char c);


/** \m65libsummary{cputhex}{Output an hex-formatted number at current position}
    \m65libsyntax    {void cputhex(long n, unsigned char prec)}
    \m65libparam     {n}{The number to write}
    \m65libparam     {prec}{The precision of the hex number, in digits. Leading zeros will be printed accordingly}
    \m65libremarks   {The $ symbol will be automatically added at beginning of string}
*/
void cputhex(long n, unsigned char prec);


/** \m65libsummary{cputdec}{Output a decimal number at current position}
    \m65libsyntax    {void cputdec(long n, unsigned char padding, unsigned char leadingZ)}
    \m65libparam     {n}{The number to write}
    \m65libparam     {padding}{The padding space to add before number}
    \m65libparam     {leadingZ}{The leading zeros to print}
*/
void cputdec(long n, unsigned char padding, unsigned char leadingZ);


/** \m65libsummary{cputs}{Output screen codes at current position}
    \m65libsyntax    {void cputs(const unsigned char* s)}
    \m65libparam     {s}{Am array of screen codes to print}
    \m65libremarks   {This function works with screen codes only. To output ordinary ASCII/PETSCII strings,
    use the "pcputs" macro. No pointer check is performed.  If s is null or invalid, behavior is undefined. }
*/
void cputs(const unsigned char* s);


/** \m65libsummary{cputsxy}{Output multiple screen codes at X,Y coordinates}
    \m65libsyntax    {void cputsxy (unsigned char x, unsigned char y, const unsigned char* s)}
    \m65libparam     {x}{The X coordinate where string will be printed}
    \m65libparam     {y}{The Y coordinate where string will be printed}
    \m65libparam     {s}{An array of screen codes to print}
    \m65libremarks   {This function works with screen codes only. To output ordinary ASCII/PETSCII strings,
    use the "pcputsxy" macro. No pointer check is performed.  If s is null or invalid, behavior is undefined. }
*/
void cputsxy(unsigned char x, unsigned char y, const unsigned char* s);


/** \m65libsummary{cputcxy}{Output a single character at X,Y coordinates}
    \m65libsyntax    {void cputcxy (unsigned char x, unsigned char y, unsigned char c)}
    \m65libparam     {x}{The X coordinate where character will be printed}
    \m65libparam     {y}{The Y coordinate where character will be printed}
    \m65libparam     {c}{The screen code of the character to print}
*/
void cputcxy(unsigned char x, unsigned char y, unsigned char c);