src/mega65/libc/bindings.rs

extern "C" {
    #[doc = " \\m65libsummary{setpalbanka}{Set alternate text/bitmap palette bank.}\n\\m65libsyntax    {void setpalbanka(unsigned char bank)}\n\\m65libparam     {bank}{The palette bank to set. Valid values are 0, 1, 2 or 3.}\n\\m65libremarks   {Use setpalbank to set main text/bitmap palette}"]
    pub fn setpalbanka(bank: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{getpalbank}{Get selected text/bitmap palette bank.}\n\\m65libsyntax    {unsigned char getpalbank(void)}\n\\m65libremarks   {Use getpalbanka to get alternate text/bitmap selected palette}\n\\m65libretval    {The current selected main text/bitmap palette bank.}"]
    pub fn getpalbank() -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\m65libsummary{getpalbanka}{Get selected alternate text/bitmap palette bank.}\n\\m65libsyntax    {unsigned char getpalbanka(void)}\n\\m65libremarks   {Use getpalbank to get main text/bitmap selected palette}\n\\m65libretval    {The current selected alternate text/bitmap palette bank.}"]
    pub fn getpalbanka() -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\m65libsummary{setmapedpal}{Set maped-in palette bank at $D100-$D3FF.}\n\\m65libsyntax    {void setmapedpal(unsigned char bank)}\n\\m65libparam     {bank}{The palette bank to map-in. Valid values are 0, 1, 2 or 3.}"]
    pub fn setmapedpal(bank: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{getmapedpal}{Get maped-in  palette bank at $D100-$D3FF.}\n\\m65libsyntax    {unsigned char getmapedpal(void)}"]
    pub fn getmapedpal() -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\m65libsummary{setpalentry}{Set color entry for the maped-in palette}\n\\m65libsyntax    {void setpalentry(unsigned char c, unsigned char r, unsigned char g, unsigned char b)}\n\\m65libparam     {c}{The palette entry index (0-255)}\n\\m65libparam     {r}{The red component value}\n\\m65libparam     {g}{The green component value}\n\\m65libparam     {b}{The blue component value}\n\\m65libremarks   {Use setmapedmal to bank-in the palette to modify}"]
    pub fn setpalentry(
        c: ::core::ffi::c_uchar,
        r: ::core::ffi::c_uchar,
        g: ::core::ffi::c_uchar,
        b: ::core::ffi::c_uchar,
    );
}
extern "C" {
    #[doc = " \\m65libsummary{fillrect}{Fill a rectangular area with character and color value}\n\\m65libsyntax    {void fillrect(const RECT *rc, unsigned char ch, unsigned char col)}\n\\m65libparam     {rc}{A RECT structure specifying the box coordinates}\n\\m65libparam     {ch}{A char code to fill the rectangle}\n\\m65libparam     {col}{The color to fill}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn fillrect(rc: *const RECT, ch: ::core::ffi::c_uchar, col: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{box}{Draws a box with graphic characters}\n\\m65libsyntax    {void box(const RECT *rc, unsigned char color, unsigned char style, unsigned char clear, unsigned char\nshadow)} \\m65libparam     {rc}{A RECT structure specifying the box coordinates} \\m65libparam     {color}{The color to use\nfor the graphic characters} \\m65libparam     {style}{The style for the box borders. Can be set to BOX_STYLE_NONE,\nBOX_STYLE_ROUNDED, BOX_STYLE_INNER, BOX_STYLE_OUTER, BOX_STYLE_MID } \\m65libparam     {clear}{Set to 1 to clear the box\ninterior with the selected color} \\m65libparam     {shadow}{Set to 1 to draw a drop shadow} \\m65libremarks   {No screen\nbounds checks are performed; out of screen behavior is undefined }"]
    #[link_name = "\u{1}box"]
    pub fn box_(
        rc: *const RECT,
        color: ::core::ffi::c_uchar,
        style: ::core::ffi::c_uchar,
        clear: ::core::ffi::c_uchar,
        shadow: ::core::ffi::c_uchar,
    );
}
extern "C" {
    #[doc = " \\m65libsummary{hline}{Draws an horizontal line.}\n\\m65libsyntax    {void hline(unsigned char x, unsigned char y, unsigned char len, unsigned char style)}\n\\m65libparam     {x}{The line start X-coordinate}\n\\m65libparam     {y}{The line start Y-coordinate}\n\\m65libparam     {len}{The line length}\n\\m65libparam     {style}{The style for the line. See HLINE_ constants for available styles. }\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn hline(
        x: ::core::ffi::c_uchar,
        y: ::core::ffi::c_uchar,
        len: ::core::ffi::c_uchar,
        style: ::core::ffi::c_uchar,
    );
}
extern "C" {
    #[doc = " \\m65libsummary{vline}{Draws a vertical line.}\n\\m65libsyntax    {void vline(unsigned char x, unsigned char y, unsigned char len, unsigned char style)}\n\\m65libparam     {x}{The line start X-coordinate}\n\\m65libparam     {y}{The line start Y-coordinate}\n\\m65libparam     {len}{The line length}\n\\m65libparam     {style}{The style for the line. See VLINE_ constants for available styles. }\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn vline(
        x: ::core::ffi::c_uchar,
        y: ::core::ffi::c_uchar,
        len: ::core::ffi::c_uchar,
        style: ::core::ffi::c_uchar,
    );
}
extern "C" {
    #[doc = " \\m65libsummary{gohome}{Set the current position at home (0,0 coordinate)}\n\\m65libsyntax    {void gohome(void)}"]
    pub fn gohome();
}
extern "C" {
    #[doc = " \\m65libsummary{gotoxy}{Set the current position at X,Y coordinates}\n\\m65libsyntax    {void gotoxy(unsigned char x, unsigned char y)}\n\\m65libparam     {x}{The new X-coordinate}\n\\m65libparam     {y}{The new Y-coordinate}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn gotoxy(x: ::core::ffi::c_uchar, y: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{gotox}{Set the current position X-coordinate}\n\\m65libsyntax    {void gotox(unsigned char x)}\n\\m65libparam     {x}{The new X-coordinate}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn gotox(x: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{gotoy}{Set the current position Y-coordinate}\n\\m65libsyntax    {void gotoy(unsigned char y)}\n\\m65libparam     {y}{The new Y-coordinate}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn gotoy(y: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{moveup}{Move current position up}\n\\m65libsyntax    {void moveup(unsigned char count)}\n\\m65libparam     {count}{The number of positions to move}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn moveup(count: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{movedown}{Move current position down}\n\\m65libsyntax    {void movedown(unsigned char count)}\n\\m65libparam     {count}{The number of positions to move}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn movedown(count: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{moveleft}{Move current position left}\n\\m65libsyntax    {void moveleft(unsigned char count)}\n\\m65libparam     {count}{The number of positions to move}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn moveleft(count: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{moveright}{Move current position right}\n\\m65libsyntax    {void moveright(unsigned char count)}\n\\m65libparam     {count}{The number of positions to move}\n\\m65libremarks   {No screen bounds checks are performed; out of screen behavior is undefined }"]
    pub fn moveright(count: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{wherex}{Return the current position X coordinate}\n\\m65libsyntax    {unsigned char wherex(void)}\n\\m65libretval    {The current position X coordinate}"]
    pub fn wherex() -> ::core::ffi::c_uchar;
}
extern "C" {
    #[doc = " \\m65libsummary{wherey}{Return the current position Y coordinate}\n\\m65libsyntax    {unsigned char wherey(void)}\n\\m65libretval    {The current position Y coordinate}"]
    pub fn wherey() -> ::core::ffi::c_uchar;
}
extern "C" {
    pub fn petsciitoscreencode(c: ::core::ffi::c_char) -> ::core::ffi::c_char;
}
extern "C" {
    pub fn petsciitoscreencode_s(s: *mut ::core::ffi::c_char) -> *mut ::core::ffi::c_char;
}
extern "C" {
    #[doc = " \\m65libsummary{cputc}{Output a single screen code character to screen at current position}\n\\m65libsyntax    {void cputc(unsigned char c)}\n\\m65libparam     {c}{The screen code of the character to output}"]
    pub fn cputc(c: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{cputnc}{Output N copies of a character at current position}\n\\m65libsyntax    {void cputnc(unsigned char count, unsigned char c)}\n\\m65libparam     {c}{The screen code of the characters to output}\n\\m65libparam     {count}{The count of characters to print}"]
    pub fn cputnc(count: ::core::ffi::c_uchar, c: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{cputhex}{Output an hex-formatted number at current position}\n\\m65libsyntax    {void cputhex(long n, unsigned char prec)}\n\\m65libparam     {n}{The number to write}\n\\m65libparam     {prec}{The precision of the hex number, in digits. Leading zeros will be printed accordingly}\n\\m65libremarks   {The $ symbol will be automatically added at beginning of string}"]
    pub fn cputhex(n: ::core::ffi::c_long, prec: ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{cputdec}{Output a decimal number at current position}\n\\m65libsyntax    {void cputdec(long n, unsigned char padding, unsigned char leadingZ)}\n\\m65libparam     {n}{The number to write}\n\\m65libparam     {padding}{The padding space to add before number}\n\\m65libparam     {leadingZ}{The leading zeros to print}"]
    pub fn cputdec(
        n: ::core::ffi::c_long,
        padding: ::core::ffi::c_uchar,
        leadingZ: ::core::ffi::c_uchar,
    );
}
extern "C" {
    #[doc = " \\m65libsummary{cputs}{Output screen codes at current position}\n\\m65libsyntax    {void cputs(const unsigned char* s)}\n\\m65libparam     {s}{Am array of screen codes to print}\n\\m65libremarks   {This function works with screen codes only. To output ordinary ASCII/PETSCII strings,\nuse the \"pcputs\" macro. No pointer check is performed.  If s is null or invalid, behavior is undefined. }"]
    pub fn cputs(s: *const ::core::ffi::c_uchar);
}
extern "C" {
    #[doc = " \\m65libsummary{cputsxy}{Output multiple screen codes at X,Y coordinates}\n\\m65libsyntax    {void cputsxy (unsigned char x, unsigned char y, const unsigned char* s)}\n\\m65libparam     {x}{The X coordinate where string will be printed}\n\\m65libparam     {y}{The Y coordinate where string will be printed}\n\\m65libparam     {s}{An array of screen codes to print}\n\\m65libremarks   {This function works with screen codes only. To output ordinary ASCII/PETSCII strings,\nuse the \"pcputsxy\" macro. No pointer check is performed.  If s is null or invalid, behavior is undefined. }"]
    pub fn cputsxy(
        x: ::core::ffi::c_uchar,
        y: ::core::ffi::c_uchar,
        s: *const ::core::ffi::c_uchar,
    );
}
extern "C" {
    #[doc = " \\m65libsummary{cputcxy}{Output a single character at X,Y coordinates}\n\\m65libsyntax    {void cputcxy (unsigned char x, unsigned char y, unsigned char c)}\n\\m65libparam     {x}{The X coordinate where character will be printed}\n\\m65libparam     {y}{The Y coordinate where character will be printed}\n\\m65libparam     {c}{The screen code of the character to print}"]
    pub fn cputcxy(x: ::core::ffi::c_uchar, y: ::core::ffi::c_uchar, c: ::core::ffi::c_uchar);
}
